--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>search movie</title>
 </head>
 <body>
-    
+    <div id="searchContainer">
+        <input type="text" id="searchInput" placeholder="Search for a movie...">
+        <button id="searchButton" onclick="searchMovie(document.getElementById('searchInput').value)">Search</button>
+    </div>
+    <div id="results"></div>
+    <script src="script.js"></script>
 </body>
 </html>
