--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div id="searchContainer">
-        <input type="text" id="searchInput" placeholder="Search for a movie...">
-        <button id="searchButton" onclick="searchMovie(document.getElementById('searchInput').value)">Search</button>
+    <input type="text" id="searchInput" placeholder="Search for a movie...">
+    <button id="searchButton">Search</button>
     </div>
     <div id="results"></div>
+    <div id="showMoreLessContainer" style="text-align:center;">
+        <button id="showMoreBtn">Show More</button>
+        <button id="showLessBtn">Show Less</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
